apps/frigate/resources/app/forward-auth.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: forward-auth
  namespace: frigate
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: frigate
  oidc:
    provider:
      issuer: https://authentik.mcswain.dev/application/o/frigate/
    clientIDRef:
      name: frigate-oidc
    clientSecret:
      name: frigate-oidc
    scopes: [frigate, openid, profile, offline_access]
    forwardAccessToken: true
    refreshToken: true
  jwt:
    providers:
      - name: authentik
        issuer: https://authentik.mcswain.dev/application/o/frigate/
        remoteJWKS:
          uri: https://authentik.mcswain.dev/application/o/frigate/jwks/
        claimToHeaders:
          - header: X-authentik-username
            claim: preferred_username
          - header: X-authentik-groups
            claim: frigate-role
          - header: X-Proxy-Secret
            claim: ak_proxy.frigate_proxy_secret
