apps/frigate/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: frigate
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: frigate
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: frigate-ingress
  namespace: frigate
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: frigate
      app.kubernetes.io/instance: frigate
      app.kubernetes.io/name: frigate
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: internal
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
            - port: "8554"
              protocol: TCP
            - port: "8555"
              protocol: TCP
            - port: "8555"
              protocol: UDP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: public
      toPorts:
        - ports:
            - port: "8555"
              protocol: TCP
            - port: "8555"
              protocol: UDP
            - port: "8971"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
